:loud_sound: Enhance logging and update project structure
- Implement logging capabilities, including console and debug logging for development.
- Add logging for root and issue endpoints to track requests and responses.
- Modifiy the root endpoint response to include a version number.
- Include a directory for future service implementations

--- a/TaskBurnerApi/TaskBurnerApi.csproj
+++ b/TaskBurnerApi/TaskBurnerApi.csproj
@@ -9,4 +9,7 @@
   <PropertyGroup>
     <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
